<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center">

    <!--Back button, top text and favourite button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="100">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="?attr/colorOnBackground"
            android:contentDescription="@string/back_button"
            android:layout_weight="20"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/harmonic"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="60"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/favourite_hollow_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_hollow_button"
            android:layout_weight="20"/>

    </LinearLayout>

    <!--Cover art shapeable image view-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/song_image_player_activity"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        app:shapeAppearanceOverlay="@style/round_corners"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="2dp"/>

    <!--Song Name-->
    <TextView
        android:id="@+id/song_name_player_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_weight="1"/>

    <!--Start and End times and seek bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_text_view"
            android:textColor="?attr/colorOnBackground"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="10"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_text_view"
            android:textColor="?attr/colorOnBackground"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="10"/>

    </LinearLayout>

    <!--Previous, next and play/pause buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">
        
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp"
            app:shapeAppearanceOverlay="@style/round_buttons"
            android:backgroundTint="?attr/colorPrimaryContainer"
            app:iconTint="?attr/colorOnPrimaryContainer"
            android:contentDescription="@string/previous_button"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/play_pause_button_player_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="40dp"
            android:layout_margin="30dp"
            app:shapeAppearanceOverlay="@style/round_buttons"
            android:backgroundTint="?attr/colorTertiaryContainer"
            app:iconTint="?attr/colorOnTertiaryContainer"
            android:contentDescription="@string/pause_button"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"
            app:shapeAppearanceOverlay="@style/round_buttons"
            android:backgroundTint="?attr/colorPrimaryContainer"
            app:iconTint="?attr/colorOnPrimaryContainer"
            android:contentDescription="@string/next_button"/>
        
    </LinearLayout>

    <!--Repeat, equalizer, timer and share buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginBottom="30dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_button"
            android:layout_weight="25"
            app:tint="?attr/colorOnBackground"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer_button"
            android:layout_weight="25"
            app:tint="?attr/colorOnBackground"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/timer_icon"
            android:contentDescription="@string/timer_button"
            android:layout_weight="25"
            app:tint="?attr/colorOnBackground"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_button"
            android:layout_weight="25"
            app:tint="?attr/colorOnBackground"/>

    </LinearLayout>

</LinearLayout>